# Neuro-Shield

./: .env.example  .gitignore  LICENSE  README.md  app.js  app.py  certificate_verification.py  package-lock.json  package.json  pyproject.toml
analytics/: README.md  package-lock.json  package.json  pyproject.toml
analytics/client/: index.html  package-lock.json  package.json  vite.config.js
analytics/client/src/: App.jsx  index.css
analytics/server/: package.json  server.js
client/: package-lock.json  package.json
client/src/: App.jsx  Layout.jsx  main.jsx  test-icons.js  theme.js
client/src/components/: AchievementCard.jsx  AchievementForm.jsx  ActivityTracker.jsx  Footer.jsx  GPAWidget.jsx  Header.jsx  Navbar.jsx  OverallScoreWidget.jsx  RightPanel.jsx  Sidebar.jsx  ToastNotification.jsx  VerificationBadge.jsx
client/src/data/: mockAchievements.js
client/src/pages/: Academics.jsx  Accreditation.jsx  Activities.jsx  Analytics.jsx  Certifications.jsx  Competitions.jsx  Dashboard.jsx  Onboarding.jsx  Portfolio.jsx  Profile.jsx  (+2 more)
config/: connect-to-db.js
controllers/: auth-controllers.js  test-controller.js
middlewares/: authorize.js
routes/: test-router.js  user-router.js
server/: package-lock.json  package.json  server.js
server/controllers/: index-controller.js  test-controller.js  user-controller.js  verify-controller.js
server/middlewares/: get-username.js  verify-certificate-mock.js
server/routes/: index-router.js  test-router.js  user-router.js  verify-router.js
utils/models/: hisaab.js  user.js
utils/services/: get-token.js
