[project]
name = "analytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "cryptography>=46.0.1",
    "opencv-python>=4.12.0.88",
    "pillow>=11.3.0",
    "pytesseract>=0.3.13",
    "qrcode>=8.2",
    "requests>=2.32.5",
]
